--- a/conf/prometheus.yml
+++ b/conf/prometheus.yml
@@ -19,6 +19,13 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
+  - job_name: 'grafana'
+    dns_sd_configs:
+    - names:
+      - 'tasks.grafana'
+      type: 'A'
+      port: 3000
+
   - job_name: 'dockerd-exporter'
     dns_sd_configs:
     - names:
