--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,7 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+      placement:
+        constraints:
+          # - node.role == manager
+          - node.labels.arch == aarch64
