--- a/conf/prometheus.yml
+++ b/conf/prometheus.yml
@@ -31,12 +31,12 @@ scrape_configs:
       type: 'A'
       port: 3000
 
-  - job_name: 'dockerd-exporter'
-    dns_sd_configs:
-    - names:
-      - 'tasks.dockerd-exporter'
-      type: 'A'
-      port: 9323
+#   - job_name: 'dockerd-exporter'
+#     dns_sd_configs:
+#     - names:
+#       - 'tasks.dockerd-exporter'
+#       type: 'A'
+#       port: 9323
 
   - job_name: 'cadvisor'
     dns_sd_configs:
@@ -50,12 +50,23 @@ scrape_configs:
       - targets:
         - rocks:8082
 
-  - job_name: 'node-exporter'
+  - job_name: 'node-exporter-armv7l'
     dns_sd_configs:
     - names:
-      - 'tasks.node-exporter'
+      - 'tasks.node-exporter-armv7l'
       type: 'A'
       port: 9100
-    static_configs:
-      - targets:
-        - shredder:9100
+
+  - job_name: 'node-exporter-aarch64'
+    dns_sd_configs:
+    - names:
+      - 'tasks.node-exporter-aarch64'
+      type: 'A'
+      port: 9100
+
+  - job_name: 'node-exporter-amd64'
+    dns_sd_configs:
+    - names:
+      - 'tasks.node-exporter-amd64'
+      type: 'A'
+      port: 9100
