--- a/conf/prometheus.yml
+++ b/conf/prometheus.yml
@@ -1,6 +1,7 @@
 global:
   scrape_interval:     15s
   evaluation_interval: 15s
+  scrape_timeout: 30s
   external_labels:
     monitor: 'arm_swarm'
 
