--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
       - 9090:9090
     volumes:
       - /mnt/g1/prometheus:/prometheus
+    networks:
+      - monitor
+      - elk
+      - traefik
     dns:
       - bebop
     deploy:
@@ -15,5 +19,15 @@ services:
       replicas: 1
       placement:
         constraints:
-          # - node.role == manager
           - node.labels.arch == aarch64
+
+networks:
+  elk:
+    driver: overlay
+    external: true
+  traefik:
+    driver: overlay
+    external: true
+  monitor:
+    name: monitor
+    driver: overlay
