--- a/conf/prometheus.yml
+++ b/conf/prometheus.yml
@@ -11,14 +11,12 @@ global:
 
 alerting:
   alertmanagers:
-  # - static_configs:
-  #   - targets:
-  #     - alertmanager:9093
-    dns_sd_configs:
-    - names:
-      - 'tasks.alertmanager'
-      type: 'A'
-      port: 9093
+    alertmanager_config:
+      dns_sd_configs:
+      - names:
+        - 'tasks.alertmanager'
+        type: 'A'
+        port: 9093
 
 scrape_configs:
   - job_name: 'prometheus'
