--- a/conf/prometheus.yml
+++ b/conf/prometheus.yml
@@ -11,12 +11,9 @@ global:
 
 alerting:
   alertmanagers:
-    - alertmanager_config:
-      dns_sd_configs:
-      - names:
-        - 'tasks.alertmanager'
-        type: 'A'
-        port: 9093
+  - static_configs:
+    - targets:
+      - alertmanager:9093
 
 scrape_configs:
   - job_name: 'prometheus'
