--- a/conf/prometheus.yml
+++ b/conf/prometheus.yml
@@ -39,13 +39,6 @@ scrape_configs:
 #       type: 'A'
 #       port: 9323
 
-  - job_name: 'cadvisor'
-    dns_sd_configs:
-    - names:
-      - 'tasks.cadvisor'
-      type: 'A'
-      port: 8080
-
   - job_name: 'traefik'
     dns_sd_configs:
     - names:
@@ -73,3 +66,24 @@ scrape_configs:
       - 'tasks.node-exporter-amd64'
       type: 'A'
       port: 9100
+
+  - job_name: 'cadvisor-armv7l'
+    dns_sd_configs:
+    - names:
+      - 'tasks.cadvisor-armv7l'
+      type: 'A'
+      port: 8080
+
+  - job_name: 'cadvisor-aarch64'
+    dns_sd_configs:
+    - names:
+      - 'tasks.cadvisor-aarch64'
+      type: 'A'
+      port: 8080
+
+  - job_name: 'cadvisor-amd64'
+    dns_sd_configs:
+    - names:
+      - 'tasks.cadvisor-amd64'
+      type: 'A'
+      port: 8080
